--- a/editor/css/style.css
+++ b/editor/css/style.css
@@ -3,8 +3,9 @@ body {
     padding: 0px;
 }
 
-canvas {
+.main-canvas {
     display: block;
+    position: absolute;
     -webkit-tap-highlight-color: rgba(0,0,0,0);
     -moz-user-select: none;
 	-webkit-user-select: none;
@@ -16,4 +17,34 @@ canvas {
     --number-color: #ff8002;
 	--string-color: lightgreen;
 	z-index: 2 !important; /* TODO Solve this in HTML */
+}
+
+/* pcui */
+
+.root-panel {
+    height: 100vh;
+}
+
+.pcui-label {
+    font-size: 14px;
+    /* line-height: 1.4; */
+}
+
+/* scrollbar */
+
+::-webkit-scrollbar {
+    width: 6px;
+    height: 6px;
+}
+
+::-webkit-scrollbar-track {
+    border-radius: 3px;
+    background: rgba(0,0,0,0.06);
+    -webkit-box-shadow: inset 0 0 5px rgba(0,0,0,0.08);
+}
+
+::-webkit-scrollbar-thumb {
+    border-radius: 3px;
+    background: rgba(0,0,0,0.12);
+    -webkit-box-shadow: inset 0 0 10px rgba(0,0,0,0.2);
 }
